<?xml version="1.0" encoding="utf-8"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>py_trees_ros</name>
  <version>1.1.2</version>
  <description>
    ROS2 extensions and behaviours for py_trees.
  </description>

  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/py_trees</url>
  <url type="repository">https://github.com/stonier/py_trees_ros</url>
  <url type="bugtracker">https://github.com/stonier/py_trees_ros/issues</url>

  <author>Daniel Stonier</author>
  <author>Michal Staniaszek</author>
  <author>Naveed Usmani</author>

  <build_depend>python3-setuptools</build_depend>

  <!-- ach, autodoc is a beast, it shouldn't need these (there is a PR going in upstream for autodoc) -->
  <!--
  <doc_depend>actionlib</doc_depend>
  <doc_depend>actionlib_msgs</doc_depend>
  <doc_depend>dynamic_reconfigure</doc_depend>
  <doc_depend>geometry_msgs</doc_depend>
  <doc_depend>move_base_msgs</doc_depend>
  <doc_depend>nav_msgs</doc_depend>
  <doc_depend>python-catkin-pkg</doc_depend>
  <doc_depend>python-rospkg</doc_depend>
  <doc_depend>py_trees</doc_depend>
  <doc_depend>py_trees_msgs</doc_depend>
  <doc_depend>rosbag</doc_depend>
  <doc_depend>rospy</doc_depend>
  <doc_depend>sensor_msgs</doc_depend>
  <doc_depend>std_msgs</doc_depend>
  <doc_depend>unique_id</doc_depend>
  <doc_depend>unique_identifier_msgs</doc_depend>
  -->

  <doc_depend>python3-sphinx</doc_depend>
  <doc_depend>python3-sphinx-argparse</doc_depend>
  <doc_depend>python3-sphinx-rtd-theme</doc_depend>

  <!-- core dependencies -->
  <depend>py_trees</depend>
  <depend>py_trees_ros_interfaces</depend>
  <depend>rclpy</depend>
  <depend>ros2topic</depend>
  <depend>std_msgs</depend>
  <depend>unique_identifier_msgs</depend>

  <!-- behaviour dependencies -->
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
