<package format="2">
  <name>py_trees_ros</name>
  <version>0.6.1</version>
  <description>
    Ros extensions and behaviours for py_trees.
  </description>

  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <maintainer email="naveedhd@gmail.com">Naveed Usmani</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/py_trees</url>
  <url type="repository">https://github.com/stonier/py_trees_ros</url>
  <url type="bugtracker">https://github.com/stonier/py_trees_ros/issues</url>

  <author>Daniel Stonier</author>
  <author>Michal Staniaszek</author>
  <author>Naveed Usmani</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>python3-setuptools</build_depend>

  <!-- ach, autodoc is a beast, it shouldn't need these (there is a PR going in upstream for autodoc) -->
  <doc_depend>actionlib</doc_depend>
  <doc_depend>actionlib_msgs</doc_depend>
  <doc_depend>dynamic_reconfigure</doc_depend>
  <doc_depend>geometry_msgs</doc_depend>
  <doc_depend>move_base_msgs</doc_depend>
  <doc_depend>nav_msgs</doc_depend>
  <doc_depend>python_qt_binding</doc_depend>
  <doc_depend>python3-sphinx-argparse</doc_depend>
  <doc_depend>python3-sphinx-rtd-theme</doc_depend>
  <doc_depend>python3-catkin-pkg</doc_depend>
  <doc_depend>python3-rospkg</doc_depend>
  <doc_depend>python3-termcolor</doc_depend>
  <doc_depend>py_trees</doc_depend>
  <doc_depend>py_trees_msgs</doc_depend>
  <doc_depend>rosbag</doc_depend>
  <doc_depend>rospy</doc_depend>
  <doc_depend>sensor_msgs</doc_depend>
  <doc_depend>std_msgs</doc_depend>
  <doc_depend>unique_id</doc_depend>
  <doc_depend>uuid_msgs</doc_depend>

  <!-- mocking & simulation dependencies -->
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>python3-termcolor</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- core dependencies -->
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>py_trees</exec_depend>
  <exec_depend>py_trees_msgs</exec_depend>
  <exec_depend>python3-rospkg</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>unique_id</exec_depend>
  <exec_depend>uuid_msgs</exec_depend>

  <test_depend>py_trees</test_depend>
  <test_depend>geometry_msgs</test_depend>
  <test_depend>python_qt_binding</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
